--- a/Carrossel/hannah.html
+++ b/Carrossel/hannah.html
@@ -201,7 +201,7 @@
       background-color: var(--fundo-claro);
     }
 
-    /* HERO (com parallax no vídeo para desktops) */
+    /* HERO (com parallax no vídeo para desktops e fixo em todas telas) */
     #hero {
       position: relative;
       display: flex;
@@ -214,14 +214,19 @@
       color: #fff;
     }
     .hero-video-wrap {
-      position: absolute;
-      top: 0; left: 0;
-      width: 100%; height: 100%;
+      /* Altere de absolute para fixed */
+      position: fixed;
+      top: 0; 
+      left: 0;
+      width: 100%; 
+      height: 100%;
       z-index: -1;
       overflow: hidden;
     }
     .hero-video-wrap video {
-      width: 100%; height: 100%;
+      /* Para cobrir toda a tela e simular parallax/fundo fixo */
+      min-width: 100%;
+      min-height: 100%;
       object-fit: cover;
     }
     #hero .hero-text {
@@ -301,9 +306,7 @@
       margin-bottom: 15px;
     }
 
-    /* Título e texto ficam sem sumir. Removemos slides se quiser. Mantemos se quiser. */
-
-    /* FUNDO PARALLAX SÓ ATRÁS DE MISSÃO/VISÃO/VALORES - MAS sem efeito de entrada */
+    /* Fundo parallax atrás de Missão/Visão/Valores */
     .valores-bg {
       position: relative;
       margin-top: 20px;
@@ -368,7 +371,7 @@
       color: #ffffff;
     }
 
-    /* PROJETOS - Mesma lógica do hero: parallax fix em telas grandes */
+    /* PROJETOS - Com fundo em parallax */
     #projetos {
       position: relative;
       color: #000;
@@ -712,19 +715,18 @@
       }
       #hero {
         padding: 20px;
-        /* Em telas pequenas, remover parallax (scrolled) */
+        /* Removemos qualquer background-attachment: scroll para manter fixo no mobile */
       }
+      /* Mantemos background-attachment: fixed mesmo em telas pequenas,
+         então removemos 'background-attachment: scroll;' nas seções abaixo. */
       #projetos {
         padding: 30px 20px;
-        background-attachment: scroll;
       }
       #historias-impacto {
         padding: 20px 10px;
-        background-attachment: scroll;
       }
       .valores-bg {
         padding: 20px 10px;
-        background-attachment: scroll;
       }
       #hero .hero-text h1 {
         font-size: 1.4rem;
@@ -901,7 +903,7 @@
       </div>
     </div>
 
-    <!-- Fundo parallax SÓ atrás de Missão/Visão/Valores (sem efeito de entrada) -->
+    <!-- Fundo parallax SÓ atrás de Missão/Visão/Valores -->
     <div class="valores-bg">
       <div class="mv-vals">
         <div class="item">
