--- a/Carrossel/hannah.html
+++ b/Carrossel/hannah.html
@@ -65,7 +65,7 @@
       background-color: rgba(232, 240, 232, 0.85);
       position: relative;
       flex-wrap: nowrap;
-      z-index: 9999; /* Bem alto, para ficar acima do vídeo */
+      z-index: 9999; /* Bem alto */
     }
 
     .menu-btn {
@@ -152,7 +152,7 @@
       font-size: 14px;
       cursor: pointer;
       flex-shrink: 0;
-      z-index: 999999; /* bem alto para ficar acima do vídeo */
+      z-index: 999999; /* bem alto */
     }
     .lang-switch button {
       display: flex;
@@ -179,7 +179,8 @@
       border-radius: 6px;
       box-shadow: 0 2px 6px rgba(0,0,0,0.15);
       overflow: hidden;
-      z-index: 9999999;
+      /* Z-index muito alto para ficar acima do vídeo */
+      z-index: 999999999; 
     }
     .lang-switch ul li {
       display: flex;
@@ -201,21 +202,21 @@
       background-color: var(--fundo-claro);
     }
 
-    /* HERO (com parallax no vídeo para desktops e fixo em todas telas) */
+    /* HERO */
     #hero {
-      position: relative;
+      position: relative;        /* para conter o vídeo somente nessa seção */
       display: flex;
       flex-wrap: wrap;
       align-items: center;
       justify-content: center;
-      min-height: 100vh;
+      min-height: 100vh;         /* ocupa a tela toda */
       text-align: center;
-      overflow: hidden;
+      overflow: hidden;          /* "corta" o vídeo fora dessa seção */
       color: #fff;
     }
     .hero-video-wrap {
-      /* Altere de absolute para fixed */
-      position: fixed;
+      /* Agora é absolute, não fixed, para o vídeo ficar restrito ao #hero */
+      position: absolute;
       top: 0; 
       left: 0;
       width: 100%; 
@@ -224,9 +225,9 @@
       overflow: hidden;
     }
     .hero-video-wrap video {
-      /* Para cobrir toda a tela e simular parallax/fundo fixo */
-      min-width: 100%;
-      min-height: 100%;
+      /* Ajustado para cobrir o contêiner #hero */
+      width: 100%;
+      height: 100%;
       object-fit: cover;
     }
     #hero .hero-text {
@@ -371,7 +372,7 @@
       color: #ffffff;
     }
 
-    /* PROJETOS - Com fundo em parallax */
+    /* PROJETOS */
     #projetos {
       position: relative;
       color: #000;
@@ -715,10 +716,7 @@
       }
       #hero {
         padding: 20px;
-        /* Removemos qualquer background-attachment: scroll para manter fixo no mobile */
       }
-      /* Mantemos background-attachment: fixed mesmo em telas pequenas,
-         então removemos 'background-attachment: scroll;' nas seções abaixo. */
       #projetos {
         padding: 30px 20px;
       }
