--- a/Carrossel/hannah.html
+++ b/Carrossel/hannah.html
@@ -143,9 +143,11 @@
       background-color: var(--secundaria);
     }
 
-    /* SELETOR DE IDIOMA (z-index alto) */
+    /* NOVO SELETOR DE IDIOMA (LADO A LADO) */
     .lang-switch {
-      position: relative;
+      display: flex;
+      align-items: center;
+      gap: 10px;
       margin-left: 15px;
       font-family: 'Montserrat', sans-serif;
       font-weight: 600;
@@ -154,68 +156,43 @@
       flex-shrink: 0;
       z-index: 999999; /* bem alto */
     }
-    .lang-switch button {
+    .lang-switch a {
       display: flex;
       align-items: center;
       gap: 5px;
-      background-color: transparent;
-      color: var(--primaria);
-      border: none;
+      padding: 5px 8px;
       border-radius: 6px;
-      padding: 5px 10px;
-    }
-    .lang-switch button img {
-      width: 20px;
-      height: 20px;
-      object-fit: cover;
-      border-radius: 2px;
-    }
-    .lang-switch ul {
-      display: none;
-      position: absolute;
-      top: 38px;
-      left: 0;
-      background-color: #fff;
-      border-radius: 6px;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.15);
-      overflow: hidden;
-      /* Z-index muito alto para ficar acima do vídeo */
-      z-index: 999999999; 
-    }
-    .lang-switch ul li {
-      display: flex;
-      align-items: center;
-      gap: 6px;
-      padding: 8px 12px;
-      font-weight: 600;
-      color: #333;
-      font-size: 14px;
       transition: background-color 0.2s ease;
+      color: var(--primaria);
+      text-decoration: none;
     }
-    .lang-switch ul li img {
+    .lang-switch a img {
       width: 20px;
       height: 20px;
       object-fit: cover;
       border-radius: 2px;
     }
-    .lang-switch ul li:hover {
+    .lang-switch a.inactive {
+      filter: grayscale(100%);
+      opacity: 0.5;
+    }
+    .lang-switch a:hover {
       background-color: var(--fundo-claro);
     }
 
     /* HERO */
     #hero {
-      position: relative;        /* para conter o vídeo somente nessa seção */
+      position: relative;
       display: flex;
       flex-wrap: wrap;
       align-items: center;
       justify-content: center;
-      min-height: 100vh;         /* ocupa a tela toda */
+      min-height: 100vh;
       text-align: center;
-      overflow: hidden;          /* "corta" o vídeo fora dessa seção */
+      overflow: hidden;
       color: #fff;
     }
     .hero-video-wrap {
-      /* Agora é absolute, não fixed, para o vídeo ficar restrito ao #hero */
       position: absolute;
       top: 0; 
       left: 0;
@@ -225,7 +202,6 @@
       overflow: hidden;
     }
     .hero-video-wrap video {
-      /* Ajustado para cobrir o contêiner #hero */
       width: 100%;
       height: 100%;
       object-fit: cover;
@@ -831,6 +807,7 @@
     <div class="logo">
       <img src="imagens/logo.png" alt="Logotipo Fundação Hannah" />
     </div>
+
     <div class="menu-btn" onclick="toggleMenu()">☰</div>
     <nav class="menu">
       <ul>
@@ -842,26 +819,23 @@
         <li><a id="nav-contato" href="#footer">Contato</a></li>
       </ul>
     </nav>
+
     <div class="cta-header">
       <button id="nav-doar" onclick="alert('Página de Doação em desenvolvimento')">Doe Agora</button>
     </div>
 
-    <!-- Seletor de idioma -->
+    <!-- NOVO SELETOR DE IDIOMA -->
     <div class="lang-switch">
-      <button id="lang-btn" onclick="toggleLangMenu()">
-        <img id="lang-flag" src="imagens/bandeira-pt.png" alt="PT" />
-        <span id="lang-abbrev">PT</span>
-      </button>
-      <ul id="lang-dropdown">
-        <li data-lang="pt">
-          <img src="imagens/bandeira-pt.png" alt="PT" />
-          PT
-        </li>
-        <li data-lang="en">
-          <img src="imagens/bandeira-en.png" alt="EN" />
-          EN
-        </li>
-      </ul>
+      <!-- PT -->
+      <a href="#" id="lang-pt" onclick="setLanguage('pt')">
+        <img src="imagens/bandeira-pt.png" alt="PT" />
+        PT
+      </a>
+      <!-- EN -->
+      <a href="#" id="lang-en" onclick="setLanguage('en')" class="inactive">
+        <img src="imagens/bandeira-en.png" alt="EN" />
+        EN
+      </a>
     </div>
   </header>
 
@@ -1155,118 +1129,123 @@
       }
     }
 
-    /* SELETOR DE IDIOMA */
-    function toggleLangMenu() {
-      const dropdown = document.getElementById('lang-dropdown');
-      if (dropdown.style.display === 'block') {
-        dropdown.style.display = 'none';
+    /* SELETOR DE IDIOMA (AGORA 2 BOTÕES) */
+    function setLanguage(lang) {
+      changeLanguage(lang);
+
+      // Se usuário escolher PT, PT fica colorido e EN cinza
+      if (lang === 'pt') {
+        document.getElementById('lang-pt').classList.remove('inactive');
+        document.getElementById('lang-en').classList.add('inactive');
       } else {
-        dropdown.style.display = 'block';
+        document.getElementById('lang-pt').classList.add('inactive');
+        document.getElementById('lang-en').classList.remove('inactive');
       }
     }
-
-    document.addEventListener('click', (e) => {
-      const langSwitch = document.querySelector('.lang-switch');
-      if (!langSwitch.contains(e.target)) {
-        document.getElementById('lang-dropdown').style.display = 'none';
-      }
-    });
 
     /* CARROSSEL & MODAL */
-    document.querySelectorAll('.min-circle').forEach(circle => {
-      circle.addEventListener('click', function () {
-        const mainCircle = document.getElementById('main-circle-content');
-        const mainImg = mainCircle.querySelector('img');
-        const mainImgSrc = mainImg.getAttribute('src');
-        const mainTitle = mainImg.getAttribute('data-title');
-        const mainText = mainImg.getAttribute('data-text');
+    document.addEventListener('DOMContentLoaded', () => {
+      // Carrossel de mini-círculos
+      document.querySelectorAll('.min-circle').forEach(circle => {
+        circle.addEventListener('click', function () {
+          const mainCircle = document.getElementById('main-circle-content');
+          const mainImg = mainCircle.querySelector('img');
+          const mainImgSrc = mainImg.getAttribute('src');
+          const mainTitle = mainImg.getAttribute('data-title');
+          const mainText = mainImg.getAttribute('data-text');
 
-        const clickedImgSrc = this.getAttribute('data-img');
-        const clickedTitle = this.getAttribute('data-title');
-        const clickedText = this.getAttribute('data-text');
+          const clickedImgSrc = this.getAttribute('data-img');
+          const clickedTitle = this.getAttribute('data-title');
+          const clickedText = this.getAttribute('data-text');
 
-        mainCircle.innerHTML = `
-          <img
-            src="${clickedImgSrc}"
-            alt="Imagem Central"
-            data-title="${clickedTitle}"
-            data-text="${clickedText}"
-            data-title-pt="${this.getAttribute('data-title-pt')}"
-            data-title-en="${this.getAttribute('data-title-en')}"
-            data-text-pt="${this.getAttribute('data-text-pt')}"
-            data-text-en="${this.getAttribute('data-text-en')}"
-          >
-        `;
+          // Troca de conteúdos (swap)
+          mainCircle.innerHTML = `
+            <img
+              src="${clickedImgSrc}"
+              alt="Imagem Central"
+              data-title="${clickedTitle}"
+              data-text="${clickedText}"
+              data-title-pt="${this.getAttribute('data-title-pt')}"
+              data-title-en="${this.getAttribute('data-title-en')}"
+              data-text-pt="${this.getAttribute('data-text-pt')}"
+              data-text-en="${this.getAttribute('data-text-en')}"
+            >
+          `;
+          const clickedImg = this.querySelector('img');
+          clickedImg.setAttribute('src', mainImgSrc);
+          this.setAttribute('data-img', mainImgSrc);
+          this.setAttribute('data-title', mainTitle);
+          this.setAttribute('data-text', mainText);
 
-        const clickedImg = this.querySelector('img');
-        clickedImg.setAttribute('src', mainImgSrc);
-        this.setAttribute('data-img', mainImgSrc);
-        this.setAttribute('data-title', mainTitle);
-        this.setAttribute('data-text', mainText);
+          this.setAttribute('data-title-pt', mainImg.getAttribute('data-title-pt'));
+          this.setAttribute('data-title-en', mainImg.getAttribute('data-title-en'));
+          this.setAttribute('data-text-pt', mainImg.getAttribute('data-text-pt'));
+          this.setAttribute('data-text-en', mainImg.getAttribute('data-text-en'));
 
-        this.setAttribute('data-title-pt', mainImg.getAttribute('data-title-pt'));
-        this.setAttribute('data-title-en', mainImg.getAttribute('data-title-en'));
-        this.setAttribute('data-text-pt', mainImg.getAttribute('data-text-pt'));
-        this.setAttribute('data-text-en', mainImg.getAttribute('data-text-en'));
-
-        document.getElementById('modal').style.display = 'block';
-        document.getElementById('modal-title').textContent = clickedTitle;
-        document.getElementById('modal-text').textContent = clickedText;
+          // Abre Modal
+          document.getElementById('modal').style.display = 'block';
+          document.getElementById('modal-title').textContent = clickedTitle;
+          document.getElementById('modal-text').textContent = clickedText;
+        });
       });
-    });
 
-    const closeBtn = document.querySelector('.close-btn');
-    closeBtn.addEventListener('click', () => {
-      document.getElementById('modal').style.display = 'none';
-    });
-    window.addEventListener('click', (event) => {
-      const modal = document.getElementById('modal');
-      if (event.target === modal) {
-        modal.style.display = 'none';
+      const closeBtn = document.querySelector('.close-btn');
+      closeBtn.addEventListener('click', () => {
+        document.getElementById('modal').style.display = 'none';
+      });
+      window.addEventListener('click', (event) => {
+        const modal = document.getElementById('modal');
+        if (event.target === modal) {
+          modal.style.display = 'none';
+        }
+      });
+
+      // Lista de projetos (texto clicável)
+      document.querySelectorAll('.project-list li').forEach(item => {
+        item.addEventListener('click', () => {
+          const title = item.getAttribute('data-title');
+          clickProjectCircleByTitle(title);
+        });
+      });
+
+      function clickProjectCircleByTitle(title) {
+        const circle = document.querySelector(`.min-circle[data-title="${title}"]`);
+        if(circle) {
+          circle.click();
+        }
       }
-    });
 
-    function clickProjectCircleByTitle(title) {
-      const circle = document.querySelector(`.min-circle[data-title="${title}"]`);
-      if(circle) {
-        circle.click();
+      // Pausa/retoma rotação do círculo
+      const circleElement = document.getElementById('circle');
+      circleElement.addEventListener('mouseover', () => {
+        circleElement.style.animationPlayState = 'paused';
+      });
+      circleElement.addEventListener('mouseout', () => {
+        circleElement.style.animationPlayState = 'running';
+      });
+
+      // Posiciona mini-círculos
+      function positionMinCircles() {
+        const circle = document.getElementById('circle');
+        if (!circle) return;
+        const minCircles = circle.querySelectorAll('.min-circle');
+        const total = minCircles.length;
+        const radiusPercent = 35;
+        const angleStep = 360 / total;
+
+        minCircles.forEach((minCircle, index) => {
+          const angle = angleStep * index;
+          const rad = angle * (Math.PI / 180);
+          const x = 50 + radiusPercent * Math.cos(rad);
+          const y = 50 + radiusPercent * Math.sin(rad);
+          minCircle.style.left = x + '%';
+          minCircle.style.top = y + '%';
+          minCircle.style.transform = 'translate(-50%, -50%)';
+        });
       }
-    }
-    document.querySelectorAll('.project-list li').forEach(item => {
-      item.addEventListener('click', () => {
-        const title = item.getAttribute('data-title');
-        clickProjectCircleByTitle(title);
-      });
+      positionMinCircles();
+      window.addEventListener('resize', positionMinCircles);
     });
-
-    const circleElement = document.getElementById('circle');
-    circleElement.addEventListener('mouseover', () => {
-      circleElement.style.animationPlayState = 'paused';
-    });
-    circleElement.addEventListener('mouseout', () => {
-      circleElement.style.animationPlayState = 'running';
-    });
-
-    function positionMinCircles() {
-      const circle = document.getElementById('circle');
-      if (!circle) return;
-      const minCircles = circle.querySelectorAll('.min-circle');
-      const total = minCircles.length;
-      const radiusPercent = 35;
-      const angleStep = 360 / total;
-
-      minCircles.forEach((minCircle, index) => {
-        const angle = angleStep * index;
-        const rad = angle * (Math.PI / 180);
-        const x = 50 + radiusPercent * Math.cos(rad);
-        const y = 50 + radiusPercent * Math.sin(rad);
-        minCircle.style.left = x + '%';
-        minCircle.style.top = y + '%';
-        minCircle.style.transform = 'translate(-50%, -50%)';
-      });
-    }
-    window.addEventListener('DOMContentLoaded', positionMinCircles);
-    window.addEventListener('resize', positionMinCircles);
 
     /* TRADUÇÕES (PT <-> EN) VIA DICIONÁRIO */
     const translations = {
@@ -1397,7 +1376,7 @@
       }
     };
 
-    // Função para trocar idioma
+    // Função central para trocar idioma
     function changeLanguage(lang) {
       document.documentElement.setAttribute("lang", lang);
 
@@ -1414,6 +1393,7 @@
       updateCarrosselData(lang);
     }
 
+    // Atualiza dados do carrossel com base no idioma
     function updateCarrosselData(lang) {
       document.querySelectorAll('.min-circle').forEach(circle => {
         circle.setAttribute('data-title', circle.getAttribute(`data-title-${lang}`));
@@ -1429,10 +1409,12 @@
       });
     }
 
-    // Ao carregar
+    // Ao carregar a página, iniciamos em PT
     window.addEventListener('load', () => {
-      changeLanguage('pt'); // Inicia em PT
-      positionMinCircles();
+      changeLanguage('pt');
+      // PT colorido, EN cinza
+      document.getElementById('lang-pt').classList.remove('inactive');
+      document.getElementById('lang-en').classList.add('inactive');
     });
   </script>
 </body>
