--- a/Carrossel/hannah.html
+++ b/Carrossel/hannah.html
@@ -258,24 +258,24 @@
     }
 
     /* ANIMAÇÕES - Slide In */
-    .slide-in-left {
-      opacity: 0;
-      transform: translateX(-150px);
-      transition: transform 0.5s ease-out, opacity 0.5s ease-out;
-    }
-    .slide-in-left-active {
-      opacity: 1;
-      transform: translateX(0);
-    }
-    .slide-in-right {
-      opacity: 0;
-      transform: translateX(150px);
-      transition: transform 0.5s ease-out, opacity 0.5s ease-out;
-    }
-    .slide-in-right-active {
-      opacity: 1;
-      transform: translateX(0);
-    }
+.slide-in-left {
+  opacity: 0;
+  transform: translateX(-500px); /* Aumenta a intensidade da entrada */
+  transition: transform 0.3s ease-out, opacity 0.8s ease-out; /* Transição mais rápida */
+}
+.slide-in-left-active {
+  opacity: 1;
+  transform: translateX(0);
+}
+.slide-in-right {
+  opacity: 0;
+  transform: translateX(500px); /* Aumenta a intensidade da entrada */
+  transition: transform 0.8s ease-out, opacity 0.3s ease-out; /* Transição mais rápida */
+}
+.slide-in-right-active {
+  opacity: 1;
+  transform: translateX(0);
+}
 
     .sobre-nos-content {
       display: flex;
