--- a/Carrossel/hannah.html
+++ b/Carrossel/hannah.html
@@ -57,16 +57,18 @@
     }
 
     /* HEADER */
-    header {
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      padding: 10px 20px;
-      background-color: rgba(232, 240, 232, 0.85);
-      position: relative;
-      flex-wrap: nowrap;
-      z-index: 9999; /* Bem alto */
-    }
+  header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 10px 20px;
+  background-color: rgba(232, 240, 232, 0.7); /* Reduzindo a opacidade para maior transparência */
+  backdrop-filter: blur(5px); /* Adiciona um leve desfoque para destacar o menu */
+  position: fixed; /* Fixa o menu no topo para efeito contínuo */
+  width: 100%; /* Garante que o menu ocupe a largura total */
+  z-index: 9999; /* Mantém o menu acima de outros elementos */
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); /* Adiciona sombra para contraste */
+}
 
     .menu-btn {
       display: none; /* só aparece no mobile */
