--- a/Carrossel/hannah.html
+++ b/Carrossel/hannah.html
@@ -1224,7 +1224,7 @@
       },
       "sobre-nos-p2": {
         pt: "Há mais de 7 anos, dedicamos nossas vidas integralmente a Deus como missionários no sudoeste asiático, onde o budismo predomina e poucos conhecem a Cristo. Já plantamos igrejas e Centros de Ensino na Tailândia e em Myanmar, e agora expandimos nosso trabalho para o Camboja. Carla, pedagoga especialista em educação, e Gustavo, professor e teólogo com mestrado em educação e missiologia, unem suas vocações para transformar vidas por meio da fé, educação e ação humanitária.",
-        en: "For over 7 years, we have dedicated our lives fully to God as missionaries in Southeast Asia, where Buddhism predominates and few know Christ. We have planted churches and Education Centers in Thailand and Myanmar, and now we are expanding our work to Cambodia. Carla, a pedagogue specialized in education, and Gustavo, a professor and theologian with a master's degree in education and missiologia, combine their callings to transform lives through faith, education, and humanitarian action."
+        en: "For over 7 years, we have dedicated our lives fully to God as missionaries in Southeast Asia, where Buddhism predominates and few know Christ. We have planted churches and Education Centers in Thailand and Myanmar, and now we are expanding our work to Cambodia. Carla, a pedagogue specialized in education, and Gustavo, a professor and theologian with a master's degree in education and missiology, combine their callings to transform lives through faith, education, and humanitarian action."
       },
       "missao-h3": { pt: "Missão", en: "Mission" },
       "missao-p": {
