--- a/Carrossel/hannah - Copy.html
+++ b/Carrossel/hannah - Copy.html
@@ -57,16 +57,18 @@
     }
 
     /* HEADER */
-    header {
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      padding: 10px 20px;
-      background-color: rgba(232, 240, 232, 0.85);
-      position: relative;
-      flex-wrap: nowrap;
-      z-index: 9999; /* Bem alto */
-    }
+  header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 10px 20px;
+  background-color: rgba(232, 240, 232, 0.7); /* Reduzindo a opacidade para maior transparência */
+  backdrop-filter: blur(5px); /* Adiciona um leve desfoque para destacar o menu */
+  position: fixed; /* Fixa o menu no topo para efeito contínuo */
+  width: 100%; /* Garante que o menu ocupe a largura total */
+  z-index: 9999; /* Mantém o menu acima de outros elementos */
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); /* Adiciona sombra para contraste */
+}
 
     .menu-btn {
       display: none; /* só aparece no mobile */
@@ -256,6 +258,27 @@
       margin-bottom: 20px;
       font-size: 2rem;
     }
+
+    /* ANIMAÇÕES - Slide In */
+.slide-in-left {
+  opacity: 0;
+  transform: translateX(-500px); /* Aumenta a intensidade da entrada */
+  transition: transform 0.3s ease-out, opacity 0.8s ease-out; /* Transição mais rápida */
+}
+.slide-in-left-active {
+  opacity: 1;
+  transform: translateX(0);
+}
+.slide-in-right {
+  opacity: 0;
+  transform: translateX(500px); /* Aumenta a intensidade da entrada */
+  transition: transform 0.8s ease-out, opacity 0.3s ease-out; /* Transição mais rápida */
+}
+.slide-in-right-active {
+  opacity: 1;
+  transform: translateX(0);
+}
+
     .sobre-nos-content {
       display: flex;
       flex-wrap: wrap;
@@ -463,6 +486,22 @@
       right: 10px;
       font-size: 28px;
       cursor: pointer;
+    }
+
+    /* Botão "Saiba Mais" no modal */
+    #modal-learn-more {
+      display: inline-block;
+      margin-top: 15px;
+      background-color: var(--primaria);
+      color: #fff;
+      padding: 8px 15px;
+      border-radius: 6px;
+      text-decoration: none;
+      font-weight: 600;
+      transition: background-color 0.3s ease;
+    }
+    #modal-learn-more:hover {
+      background-color: var(--secundaria);
     }
 
     /* LISTA PROJETOS */
@@ -866,10 +905,13 @@
     <h2 id="sobre-nos-h2">Sobre Nós</h2>
 
     <div class="sobre-nos-content">
-      <div class="sobre-nos-img">
+      <!-- ADICIONAMOS CLASSE PARA ANIMAR (ENTRA DA ESQUERDA) -->
+      <div class="sobre-nos-img slide-in-left">
         <img src="imagens/gustavocarla.png" alt="Gustavo e Carla" />
       </div>
-      <div class="sobre-nos-text">
+
+      <!-- ADICIONAMOS CLASSE PARA ANIMAR (ENTRA DA DIREITA) -->
+      <div class="sobre-nos-text slide-in-right">
         <p id="sobre-nos-p1"></p>
         <p id="sobre-nos-p2"></p>
       </div>
@@ -1050,6 +1092,8 @@
       <span class="close-btn">&times;</span>
       <h2 id="modal-title"></h2>
       <p id="modal-text"></p>
+      <!-- NOVO BOTÃO/LINK "Saiba Mais / Learn More" -->
+      <a id="modal-learn-more" href="projetos.html" target="_blank"></a>
     </div>
   </div>
 
@@ -1129,7 +1173,7 @@
       }
     }
 
-    /* SELETOR DE IDIOMA (AGORA 2 BOTÕES) */
+    /* SELETOR DE IDIOMA (2 BOTÕES) */
     function setLanguage(lang) {
       changeLanguage(lang);
 
@@ -1142,110 +1186,6 @@
         document.getElementById('lang-en').classList.remove('inactive');
       }
     }
-
-    /* CARROSSEL & MODAL */
-    document.addEventListener('DOMContentLoaded', () => {
-      // Carrossel de mini-círculos
-      document.querySelectorAll('.min-circle').forEach(circle => {
-        circle.addEventListener('click', function () {
-          const mainCircle = document.getElementById('main-circle-content');
-          const mainImg = mainCircle.querySelector('img');
-          const mainImgSrc = mainImg.getAttribute('src');
-          const mainTitle = mainImg.getAttribute('data-title');
-          const mainText = mainImg.getAttribute('data-text');
-
-          const clickedImgSrc = this.getAttribute('data-img');
-          const clickedTitle = this.getAttribute('data-title');
-          const clickedText = this.getAttribute('data-text');
-
-          // Troca de conteúdos (swap)
-          mainCircle.innerHTML = `
-            <img
-              src="${clickedImgSrc}"
-              alt="Imagem Central"
-              data-title="${clickedTitle}"
-              data-text="${clickedText}"
-              data-title-pt="${this.getAttribute('data-title-pt')}"
-              data-title-en="${this.getAttribute('data-title-en')}"
-              data-text-pt="${this.getAttribute('data-text-pt')}"
-              data-text-en="${this.getAttribute('data-text-en')}"
-            >
-          `;
-          const clickedImg = this.querySelector('img');
-          clickedImg.setAttribute('src', mainImgSrc);
-          this.setAttribute('data-img', mainImgSrc);
-          this.setAttribute('data-title', mainTitle);
-          this.setAttribute('data-text', mainText);
-
-          this.setAttribute('data-title-pt', mainImg.getAttribute('data-title-pt'));
-          this.setAttribute('data-title-en', mainImg.getAttribute('data-title-en'));
-          this.setAttribute('data-text-pt', mainImg.getAttribute('data-text-pt'));
-          this.setAttribute('data-text-en', mainImg.getAttribute('data-text-en'));
-
-          // Abre Modal
-          document.getElementById('modal').style.display = 'block';
-          document.getElementById('modal-title').textContent = clickedTitle;
-          document.getElementById('modal-text').textContent = clickedText;
-        });
-      });
-
-      const closeBtn = document.querySelector('.close-btn');
-      closeBtn.addEventListener('click', () => {
-        document.getElementById('modal').style.display = 'none';
-      });
-      window.addEventListener('click', (event) => {
-        const modal = document.getElementById('modal');
-        if (event.target === modal) {
-          modal.style.display = 'none';
-        }
-      });
-
-      // Lista de projetos (texto clicável)
-      document.querySelectorAll('.project-list li').forEach(item => {
-        item.addEventListener('click', () => {
-          const title = item.getAttribute('data-title');
-          clickProjectCircleByTitle(title);
-        });
-      });
-
-      function clickProjectCircleByTitle(title) {
-        const circle = document.querySelector(`.min-circle[data-title="${title}"]`);
-        if(circle) {
-          circle.click();
-        }
-      }
-
-      // Pausa/retoma rotação do círculo
-      const circleElement = document.getElementById('circle');
-      circleElement.addEventListener('mouseover', () => {
-        circleElement.style.animationPlayState = 'paused';
-      });
-      circleElement.addEventListener('mouseout', () => {
-        circleElement.style.animationPlayState = 'running';
-      });
-
-      // Posiciona mini-círculos
-      function positionMinCircles() {
-        const circle = document.getElementById('circle');
-        if (!circle) return;
-        const minCircles = circle.querySelectorAll('.min-circle');
-        const total = minCircles.length;
-        const radiusPercent = 35;
-        const angleStep = 360 / total;
-
-        minCircles.forEach((minCircle, index) => {
-          const angle = angleStep * index;
-          const rad = angle * (Math.PI / 180);
-          const x = 50 + radiusPercent * Math.cos(rad);
-          const y = 50 + radiusPercent * Math.sin(rad);
-          minCircle.style.left = x + '%';
-          minCircle.style.top = y + '%';
-          minCircle.style.transform = 'translate(-50%, -50%)';
-        });
-      }
-      positionMinCircles();
-      window.addEventListener('resize', positionMinCircles);
-    });
 
     /* TRADUÇÕES (PT <-> EN) VIA DICIONÁRIO */
     const translations = {
@@ -1284,7 +1224,7 @@
       },
       "sobre-nos-p2": {
         pt: "Há mais de 7 anos, dedicamos nossas vidas integralmente a Deus como missionários no sudoeste asiático, onde o budismo predomina e poucos conhecem a Cristo. Já plantamos igrejas e Centros de Ensino na Tailândia e em Myanmar, e agora expandimos nosso trabalho para o Camboja. Carla, pedagoga especialista em educação, e Gustavo, professor e teólogo com mestrado em educação e missiologia, unem suas vocações para transformar vidas por meio da fé, educação e ação humanitária.",
-        en: "For over 7 years, we have dedicated our lives fully to God as missionaries in Southeast Asia, where Buddhism predominates and few know Christ. We have planted churches and Education Centers in Thailand and Myanmar, and now we are expanding our work to Cambodia. Carla, a pedagogue specialized in education, and Gustavo, a professor and theologian with a master's degree in education and missiologia, combine their callings to transform lives through faith, education, and humanitarian action."
+        en: "For over 7 years, we have dedicated our lives fully to God as missionaries in Southeast Asia, where Buddhism predominates and few know Christ. We have planted churches and Education Centers in Thailand and Myanmar, and now we are expanding our work to Cambodia. Carla, a pedagogue specialized in education, and Gustavo, a professor and theologian with a master's degree in education and missiology, combine their callings to transform lives through faith, education, and humanitarian action."
       },
       "missao-h3": { pt: "Missão", en: "Mission" },
       "missao-p": {
@@ -1373,13 +1313,19 @@
       "footer-info": {
         pt: "Endereço: (Seu endereço completo) | E-mail: (Seu e-mail) | WhatsApp: (Seu telefone)",
         en: "Address: (Your complete address) | Email: (Your email) | WhatsApp: (Your phone)"
+      },
+
+      /* BOTÃO "SAIBA MAIS" NO MODAL */
+      "modal-learn-more": {
+        pt: "Saiba Mais",
+        en: "Learn More"
       }
     };
 
-    // Função central para trocar idioma
     function changeLanguage(lang) {
       document.documentElement.setAttribute("lang", lang);
 
+      // Troca de texto de todos os IDs mapeados no translations
       for (let key in translations) {
         const element = document.getElementById(key);
         if (element) {
@@ -1393,8 +1339,8 @@
       updateCarrosselData(lang);
     }
 
-    // Atualiza dados do carrossel com base no idioma
     function updateCarrosselData(lang) {
+      // Atualiza titles/text dos min-circles
       document.querySelectorAll('.min-circle').forEach(circle => {
         circle.setAttribute('data-title', circle.getAttribute(`data-title-${lang}`));
         circle.setAttribute('data-text', circle.getAttribute(`data-text-${lang}`));
@@ -1404,10 +1350,133 @@
         mainImg.setAttribute('data-title', mainImg.getAttribute(`data-title-${lang}`));
         mainImg.setAttribute('data-text', mainImg.getAttribute(`data-text-${lang}`));
       }
+      // Atualiza titles nas lis
       document.querySelectorAll('.project-list li').forEach(item => {
         item.setAttribute('data-title', item.getAttribute(`data-title-${lang}`));
       });
     }
+
+    // Observa rolagem para animar seção "Sobre Nós"
+    function initSobreNosAnimation() {
+      const sobreNosSection = document.querySelector('#sobre-nos');
+      const observer = new IntersectionObserver((entries) => {
+        entries.forEach(entry => {
+          if (entry.isIntersecting) {
+            // Ativa as animações (classes .slide-in-left-active / .slide-in-right-active)
+            document.querySelector('.sobre-nos-img').classList.add('slide-in-left-active');
+            document.querySelector('.sobre-nos-text').classList.add('slide-in-right-active');
+            // Para não repetir
+            observer.unobserve(entry.target);
+          }
+        });
+      }, { threshold: 0.2 });
+      observer.observe(sobreNosSection);
+    }
+
+    document.addEventListener('DOMContentLoaded', () => {
+      // Carrossel: min-circles
+      document.querySelectorAll('.min-circle').forEach(circle => {
+        circle.addEventListener('click', function () {
+          const mainCircle = document.getElementById('main-circle-content');
+          const mainImg = mainCircle.querySelector('img');
+          const mainImgSrc = mainImg.getAttribute('src');
+          const mainTitle = mainImg.getAttribute('data-title');
+          const mainText = mainImg.getAttribute('data-text');
+
+          const clickedImgSrc = this.getAttribute('data-img');
+          const clickedTitle = this.getAttribute('data-title');
+          const clickedText = this.getAttribute('data-text');
+
+          // Faz swap
+          mainCircle.innerHTML = `
+            <img
+              src="${clickedImgSrc}"
+              alt="Imagem Central"
+              data-title="${clickedTitle}"
+              data-text="${clickedText}"
+              data-title-pt="${this.getAttribute('data-title-pt')}"
+              data-title-en="${this.getAttribute('data-title-en')}"
+              data-text-pt="${this.getAttribute('data-text-pt')}"
+              data-text-en="${this.getAttribute('data-text-en')}"
+            >
+          `;
+          const clickedImg = this.querySelector('img');
+          clickedImg.setAttribute('src', mainImgSrc);
+          this.setAttribute('data-img', mainImgSrc);
+          this.setAttribute('data-title', mainTitle);
+          this.setAttribute('data-text', mainText);
+
+          this.setAttribute('data-title-pt', mainImg.getAttribute('data-title-pt'));
+          this.setAttribute('data-title-en', mainImg.getAttribute('data-title-en'));
+          this.setAttribute('data-text-pt', mainImg.getAttribute('data-text-pt'));
+          this.setAttribute('data-text-en', mainImg.getAttribute('data-text-en'));
+
+          // Abre modal
+          document.getElementById('modal').style.display = 'block';
+          document.getElementById('modal-title').textContent = clickedTitle;
+          document.getElementById('modal-text').textContent = clickedText;
+
+          // Atualiza texto do botão "Saiba Mais / Learn More" conforme idioma atual
+          const currentLang = document.documentElement.getAttribute('lang') || 'pt';
+          document.getElementById('modal-learn-more').innerHTML = translations['modal-learn-more'][currentLang];
+        });
+      });
+
+      // Botão fecha modal
+      const closeBtn = document.querySelector('.close-btn');
+      closeBtn.addEventListener('click', () => {
+        document.getElementById('modal').style.display = 'none';
+      });
+      window.addEventListener('click', (event) => {
+        const modal = document.getElementById('modal');
+        if (event.target === modal) {
+          modal.style.display = 'none';
+        }
+      });
+
+      // Lista projetos (quando clica em um LI, dispara clique no min-circle)
+      document.querySelectorAll('.project-list li').forEach(item => {
+        item.addEventListener('click', () => {
+          const title = item.getAttribute('data-title');
+          const circle = document.querySelector(`.min-circle[data-title="${title}"]`);
+          if(circle) circle.click();
+        });
+      });
+
+      // Pausa e retoma animação do círculo (hover)
+      const circleElement = document.getElementById('circle');
+      circleElement.addEventListener('mouseover', () => {
+        circleElement.style.animationPlayState = 'paused';
+      });
+      circleElement.addEventListener('mouseout', () => {
+        circleElement.style.animationPlayState = 'running';
+      });
+
+      // Posiciona mini-círculos no círculo
+      function positionMinCircles() {
+        const circle = document.getElementById('circle');
+        if (!circle) return;
+        const minCircles = circle.querySelectorAll('.min-circle');
+        const total = minCircles.length;
+        const radiusPercent = 35;
+        const angleStep = 360 / total;
+
+        minCircles.forEach((minCircle, index) => {
+          const angle = angleStep * index;
+          const rad = angle * (Math.PI / 180);
+          const x = 50 + radiusPercent * Math.cos(rad);
+          const y = 50 + radiusPercent * Math.sin(rad);
+          minCircle.style.left = x + '%';
+          minCircle.style.top = y + '%';
+          minCircle.style.transform = 'translate(-50%, -50%)';
+        });
+      }
+      positionMinCircles();
+      window.addEventListener('resize', positionMinCircles);
+
+      // Inicia animação "Sobre Nós"
+      initSobreNosAnimation();
+    });
 
     // Ao carregar a página, iniciamos em PT
     window.addEventListener('load', () => {
