--- a/Carrossel/hannah.html
+++ b/Carrossel/hannah.html
@@ -1074,7 +1074,7 @@
           data-text-pt='Imagine um aplicativo que ensina inglês de forma divertida e interativa, perfeitamente alinhado ao CEFR, compartilhando valores cristãos e aprofundando o conhecimento bíblico. Esse é o Curso de Inglês Hannah—um programa gamificado com histórias da Bíblia, músicas, vídeos e a assistência de IA do “Samuel the Robot”. Cada aula é única e envolvente, onde a protagonista Hannah guia crianças, jovens e adultos em uma aventura linguística que vai muito além de gramática: cada lição se torna um encontro transformador com a Palavra de Deus.'
           data-text-en='Imagine an app that teaches English in a fun and interactive way, perfectly aligned with the CEFR (Common European Framework of Reference for Languages), while also sharing Christian values and deepening biblical knowledge. This is the Hannah English Course—a gamified program featuring Bible stories, music, videos, and the powerful AI assistance of “Samuel the Robot,” ensuring each lesson is unique and captivating. Our protagonist, Hannah, guides children, youth, and even adults through a linguistic adventure that goes far beyond grammar and vocabulary: every Bible passage and lesson becomes a life-changing encounter with God’s Word.'
         >
-          <img src="imagens/img8.png" alt="Curso de Inglês Hannah" />
+          <img src="imagens/img8.gif" alt="Curso de Inglês Hannah" />
         </div>
       </div>
     </div>
