--- a/Carrossel/projetos.html
+++ b/Carrossel/projetos.html
@@ -266,65 +266,77 @@
       border-radius: 10px;
     }
 
-    /* Carrossel Horizontal */
-    .carousel-container {
-      position: relative;
-      max-width: 1000px;
-      margin: 50px auto;
-      overflow: hidden;
-    }
-    .carousel-track {
-      display: flex;
-      transition: transform 0.5s ease;
-    }
-    .carousel-item {
-      min-width: 250px;
-      margin-right: 20px;
-      background-color: #f7f7f7;
-      border-radius: 8px;
-      box-shadow: 0 2px 5px rgba(0,0,0,0.2);
-      text-align: center;
-      flex-shrink: 0;
-      position: relative;
-    }
-    .carousel-item img {
-      width: 100%;
-      height: 180px;
-      object-fit: cover;
-      border-radius: 8px 8px 0 0;
-    }
-    .carousel-item h3 {
-      margin: 10px 0;
-      font-family: 'Montserrat', sans-serif;
-      color: var(--primaria);
-    }
-    /* Botões de navegação do carrossel */
-    .carousel-btn {
-      position: absolute;
-      top: 50%;
-      transform: translateY(-50%);
-      background-color: var(--primaria);
-      color: #fff;
-      border: none;
-      border-radius: 50%;
-      width: 40px;
-      height: 40px;
-      cursor: pointer;
-      z-index: 10;
-      font-weight: bold;
-      font-size: 18px;
-      opacity: 0.8;
-      transition: opacity 0.3s ease;
-    }
-    .carousel-btn:hover {
-      opacity: 1;
-    }
-    .carousel-btn-prev {
-      left: 10px;
-    }
-    .carousel-btn-next {
-      right: 10px;
-    }
+ /* Carrossel Horizontal */
+.carousel-container {
+  position: relative;
+  max-width: 800px; /* Diminuído o tamanho máximo */
+  margin: 20px auto; /* Reduzida a margem */
+  overflow: hidden;
+  background: rgba(255, 255, 255, 0.5); /* Fundo branco com transparência */
+  border-radius: 10px; /* Bordas arredondadas para um visual elegante */
+}
+
+.carousel-track {
+  display: flex;
+  transition: transform 0.5s ease;
+}
+
+.carousel-item {
+  min-width: 180px; /* Reduzido o tamanho mínimo */
+  margin-right: 15px; /* Menor espaço entre os itens */
+  background-color: rgba(255, 255, 255, 0.8); /* Fundo branco mais transparente nos itens */
+  border-radius: 6px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Reduzi a intensidade da sombra */
+  text-align: center;
+  flex-shrink: 0;
+  position: relative;
+}
+
+.carousel-item img {
+  width: 100%;
+  height: auto; /* Ajusta automaticamente a altura proporcional à largura */
+  max-height: 120px; /* Limita a altura para evitar imagens muito grandes */
+  object-fit: contain; /* Ajusta a imagem para que seja completamente visível */
+  border-radius: 6px; /* Bordas ajustadas */
+}
+
+.carousel-item h3 {
+  margin: 8px 0; /* Margem menor */
+  font-family: 'Montserrat', sans-serif;
+  font-size: 14px; /* Fonte menor */
+  color: var(--primaria);
+}
+
+/* Botões de navegação do carrossel */
+.carousel-btn {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  background-color: rgba(0, 0, 0, 0.6); /* Fundo preto com transparência */
+  color: #fff;
+  border: none;
+  border-radius: 50%;
+  width: 30px; /* Botões menores */
+  height: 30px;
+  cursor: pointer;
+  z-index: 10;
+  font-weight: bold;
+  font-size: 16px; /* Fonte reduzida */
+  opacity: 0.7;
+  transition: opacity 0.3s ease;
+}
+
+.carousel-btn:hover {
+  opacity: 1;
+}
+
+.carousel-btn-prev {
+  left: 8px; /* Ajustado para o tamanho menor */
+}
+
+.carousel-btn-next {
+  right: 8px; /* Ajustado para o tamanho menor */
+}
 
     /* CONTAINER ESCONDIDO (DETALHES DO PROJETO) */
     #container-detalhes {
